FIX: Ensure composer grippie stays visible
Fixes a small regression in ab58b0c.

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -540,6 +540,7 @@ body:not(.ios-safari-composer-hacks) {
     }
     padding-bottom: var(--composer-ipad-padding);
     padding-bottom: calc(10px + env(keyboard-inset-height));
+    box-sizing: border-box;
   }
 }
 
